# ea-rs

./: .containerignore  .env  .gitignore  .gitmodules  Cargo.toml  Containerfile  Containerfile.dev  Makefile.toml  README.md  docker-compose.stack.yaml  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml  task
.cargo/: config.toml
.devcontainer/: devcontainer.json
.docker/haproxy/: Dockerfile  build.sh  haproxy.cfg
data/migrations/: 1604967790810_create_db_account.sql  1604968004125_create_audit_trail_logs_table.sql  1604968452349_create_internals.sql  1604970112086_create_site_preferences_table.sql  1604970127560_create_work_preferences_table.sql  1604970145009_create_work_experiences_table.sql  1604970161139_create_bank_accounts_table.sql  1604970180940_create_withdrawal_requests_table.sql  1604970181832_create_talent_pools_table.sql  1604970196932_create_organizations_table.sql  1604970198563_create_offers_table.sql  1604970216731_create_projects_table.sql  1604970229491_create_project_clues_table.sql  1604970239187_create_project_members_table.sql  1615729586750_create_notifications_table.sql  1615729597604_create_events_table.sql  1615729881819_create_activity_feeds_table.sql  1629128689504_create_db_address.sql  (+14 more)
haproxy/: Dockerfile  haproxy.cfg
proto/: account.proto  account_ext.proto  accounts.proto  address.proto  bank_account.proto  country.proto  experience_level.proto  industry.proto  notification.proto  num_types.proto  offer.proto  organization.proto  project.proto  project_category.proto  project_clue.proto  project_member.proto  rank.proto  site_preference.proto  talent_pool.proto  wallet.proto  wallet_activity.proto  withdrawal_request.proto  work_experience.proto  work_function.proto  work_preference.proto
(+3 files in other folders)
